deployments/local/cluster/envoy/envoy.yaml
layered_runtime:
  layers:
  - name: static_layer_0
    static_layer:
      overload:
        global_downstream_max_connections: 50000

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 4443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
#          access_log:
#            name: envoy.access_loggers.file
#            typed_config:
#              '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
#              path: /dev/stdout
#              typed_json_format:
#                '@timestamp': '%START_TIME%'
#                application: keycloak
#                bytes_sent: '%BYTES_SENT%'
#                client: '%UPSTREAM_HOST%'
#                correlation_id: '%REQ(service-correlationid)%'
#                data_version: '2'
#                description: '%REQ(:METHOD)% %UPSTREAM_HOST% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%
#                  %PROTOCOL%'
#                downstream_local_Address: '%DOWNSTREAM_LOCAL_ADDRESS%'
#                duration_ms: '%DURATION%'
#                endpoint: '%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%'
#                entity_code: '%REQ(entityCode)%'
#                environment: dev
#                level: INFO
#                name: envoy-https-outbound
#                protocol: '%PROTOCOL%'
#                req_sni: '%REQUESTED_SERVER_NAME%'
#                response_code: '%RESPONSE_CODE%'
#                response_flags: '%RESPONSE_FLAGS%'
#                server: '%DOWNSTREAM_REMOTE_ADDRESS%'
#                start_time: '%START_TIME%'
#                type: log
#                upstream_cluster: '%UPSTREAM_CLUSTER%'
#                upstream_duration_ms: '%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%'
#                upstream_local_Address: '%UPSTREAM_LOCAL_ADDRESS%'
#                upstream_transport_failure_reason: '%UPSTREAM_TRANSPORT_FAILURE_REASON%'
          stat_prefix: http_proxy
          route_config:
            name: all
            virtual_hosts:
            - name: keycloak_cluster
              domains:
#              - 'id.acme.test'
                - '*'
              routes:
              - match: { prefix: "/admin" }
                direct_response: { status: 403, body: { inline_string: "Forbidden" } }
              - match: { prefix: "/auth" }
                route:
                  cluster: keycloak_cluster
          http_filters:
          - name: envoy.filters.http.router

      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
              certificate_chain: { filename: "/etc/envoy/cert.pem" }
              private_key: { filename: "/etc/envoy/key.pem" }
            alpn_protocols: [ "h2,http/1.1" ]
            tls_params:
              tls_minimum_protocol_version: "TLSv1_2"
  clusters:
  - name: keycloak_cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN

#    outlier_detection: # where amazing happened 😁
#      consecutive_5xx: 1

#    common_lb_config:
#      healthy_panic_threshold:
#        value: 0.0

    health_checks:
      - timeout: "1s"
        interval: "3s"
        interval_jitter: 1s
        unhealthy_threshold: 1
        healthy_threshold: 1
        reuse_connection: true
        always_log_health_check_failures: true
        event_log_path: /dev/stdout
        http_health_check:
          path: "/auth"

    load_assignment:
      cluster_name: keycloak_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: acme-keycloak-1
                port_value: 8080
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: acme-keycloak-2
                port_value: 8080
